--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/router": "~9.1.9",
     "@ngrx/effects": "^9.1.2",
     "@ngrx/store": "^9.1.2",
+    "angular-cesium": "0.0.66",
     "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
+    "cesium": "^1.69.0",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "rxjs": "~6.5.4",
