--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ngrx/effects": "^9.1.2",
     "@ngrx/store": "^9.1.2",
     "angular-cesium": "0.0.66",
+    "angular-material": "^1.1.22",
+    "apollo-angular": "^1.9.1",
     "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
     "cesium": "^1.69.0",
@@ -31,7 +33,10 @@
     "graphql-tag": "^2.10.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "apollo-angular-link-http": "^1.10.0",
+    "apollo-client": "^2.6.0",
+    "apollo-cache-inmemory": "^1.6.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.7",
